# rust-wgpu-msm

./: Cargo.toml  README.md
src/: README.md  application.rs  camera.rs  gaussian.wgsl  light.rs  main.rs  model.rs  renderer.rs  resources.rs  scenegraph.rs  shader.wgsl  shadow.wgsl  texture.rs
src/assets/macchu_picchu_Obj/: Map__104_Falloff.tga  Map__107_Normal_Bump.tga  Map__116_Normal_Bump.tga  Map__81_Mix.tga  macchu_picchu_obj.mtl
