[package]
name = "msm-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30.9"
wgpu = "24.0.1"
pollster = "0.4.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = [
"Document",
"Window",
"Element",
"Location",
]}
wasm-bindgen-futures = "0.4.50"
bytemuck = "1.21.0"
glam = "0.30.0"
instant = "0.1.13"
cfg-if = "1.0.0"
reqwest = "0.12.15"
anyhow = "1.0.97"
tobj = { version = "4.0.2", features = ["async"] }
image = "0.25.5"
